--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                 <img src="src/webp/portfolio-preview.png" alt="charwayyyyyy portfolio preview image" />
               </div>
               <div class="info-div">
-                <img src="src/webp/portfolio-preview.png" alt="charwayyyyyy favicon" class="faviconforProject" />
+                <img src="src/webp/portfolio" alt="charwayyyyyy favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Charwayyyyyy's Portfolio</article>
                 <p class="ProjectDescription">
                   My personal portfolio website showcasing my skills, projects, and experiences as a fullstack developer.
@@ -509,7 +509,7 @@
                 It features a user-friendly interface, secure login, and data visualization tools.
               </p>
               <div class="project-buttons">
-                <a href="https://sms.com" target="_blank" rel="noopener" class="cta"
+                <a href="https://github.com/charwayyyyyy/collegium.git" target="_blank" rel="noopener" class="cta"
                   aria-label="Visit sms Live">
                   <span>Live view</span>
                   <svg viewBox="0 0 13 10" height="10px" width="15px">
@@ -521,6 +521,28 @@
             </div>
           </div>
           <!-- ---------------------- -->
+          <div class ="project-box project-box1" id="project-box1">
+            <div class="image-div">
+              <img src="src/webp/todolist.png" alt="charwayyyyyy website preview image" />
+            </div>
+            <div class="info-div">
+              <img src="src/webp/todolist.png" alt="charwayyyyyy favicon" class="faviconforProject" />
+              <article class="ProjectHeading">To-do List App</article>
+              <p class="ProjectDescription">
+                To-do List App: A web application for managing tasks and to-do items.
+                It features a user-friendly interface, task categorization, and progress tracking.
+              </p>
+              <div class="project-buttons">
+                <a href="https://github.com/charwayyyyyy/To-do-list-app.git" target="_blank" rel="noopener" class="cta"
+                  aria-label="Visit charwayyyyyy's website Live">
+                  <span>Live view</span>
+                  <svg viewBox="0 0 13 10" height="10px" width="15px">
+                    <path d="M1,5 L11,5"></path>
+                    <polyline points="8 1 12 5 8 9"></polyline>
+                  </svg>
+                </a>
+              </div>
+            </div>
           <!-- ---------------------- -->
           <!-- ---------------------- -->
           <!-- ---------------------- -->
