--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                 <img src="src/webp/portfolio-preview.png" alt="charwayyyyyy portfolio preview image" />
               </div>
               <div class="info-div">
-                <img src="src/webp/portfolio" alt="charwayyyyyy favicon" class="faviconforProject" />
+                <img src="src/webp/portfolio-preview .png" alt="charwayyyyyy favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Charwayyyyyy's Portfolio</article>
                 <p class="ProjectDescription">
                   My personal portfolio website showcasing my skills, projects, and experiences as a fullstack developer.
