--- a/index.html
+++ b/index.html
@@ -544,8 +544,76 @@
               </div>
             </div>
           <!-- ---------------------- -->
+          </div>
+          <div class ="project-box project-box2" id="project-box2">
+            <div class="image-div">
+              <img src="src/webp/cusinier.png" alt="cusinier website preview image" />
+            </div>
+            <div class="info-div">
+              <img src="src/webp/cusinier.png" alt="cusinier favicon" class="faviconforProject" />
+              <article class="ProjectHeading">Cusinier Website</article>
+              <p class="ProjectDescription">
+                Cuisinier is a web application designed to help you turn the ingredients you 
+                already have in your kitchen into delicious meals. 
+                Save time, reduce food waste, and enjoy cooking with personalized recipe recommendations.
+              </p>
+              <div class="project-buttons">
+                <a href=" https://thecuisinier.netlify.app/" target="_blank" rel="noopener" class="cta"
+                  aria-label="Visit cusinier Live">
+                  <span>Live view</span>
+                  <svg viewBox="0 0 13 10" height="10px" width="15px">
+                    <path d="M1,5 L11,5"></path>
+                    <polyline points="8 1 12 5 8 9"></polyline>
+                  </svg>
+                </a>
+              </div>
           <!-- ---------------------- -->
+            </div>
+          </div>
+          <div class ="project-box project-box1" id="project-box1">
+            <div class="image-div">
+              <img src="src/webp/gameofchess.png" alt="game of chess website preview image" />
+            </div>
+            <div class="info-div">
+              <img src="src/webp/gameofchess.png" alt="game of chess favicon" class="faviconforProject" />
+              <article class="ProjectHeading">Game of Chess</article>
+              <p class="ProjectDescription">
+                Game of Chess: A web-based chess game that allows users to play chess against each other or against an AI opponent.
+              </p>
+              <div class="project-buttons">
+                <a href="https://game-of-chess-seven.vercel.app/" target="_blank" rel="noopener" class="cta"
+                  aria-label="Visit game of chess Live">
+                  <span>Live view</span>
+                  <svg viewBox="0 0 13 10" height="10px" width="15px">
+                    <path d="M1,5 L11,5"></path>
+                    <polyline points="8 1 12 5 8 9"></polyline>
+                  </svg>
+                </a>
+              </div>
           <!-- ---------------------- -->
+            </div>
+          </div>
+          <div class ="project-box project-box2" id="project-box2">
+            <div class="image-div">
+              <img src="src/webp/algomatch.png" alt="algomatch website preview image" />
+            </div>
+            <div class="info-div">
+              <img src="src/webp/algomatch.png" alt="algomatch favicon" class="faviconforProject" />
+              <article class="ProjectHeading">Algomatch</article>
+              <p class="ProjectDescription">
+AlgoMatch is a web application that helps developers practice coding interviews by matching
+ them with peers for mock interviews and providing a collaborative coding environment
+              </p>
+              <div class="project-buttons">
+                <a href="https://algomatch.vercel.app/" target="_blank" rel="noopener" class="cta"
+                  aria-label="Visit algomatch Live">
+                  <span>Live view</span>
+                  <svg viewBox="0 0 13 10" height="10px" width="15px">
+                    <path d="M1,5 L11,5"></path>
+                    <polyline points="8 1 12 5 8 9"></polyline>
+                  </svg>
+                </a>
+              </div>
           <!-- --------------------- -->
           <!-- --------------------- -->
 
