Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     <section class="projects-section-container" id="projects">
       <div class="projects-section-div">
         <div class="section-heading" data-aos="fade-up">
-          <h2 class="section-heading-article" tabindex="0" aria-label="My projects starts from here">
+          <h2 class="section-heading-article" tabindex="0" aria-label="Some projects i have worked on:">
             &#60;/Projects&#62;
           </h2>
           <p class="sectionHeadingP"></p>
@@ -450,15 +450,16 @@
           <div data-aos="fade-up" class="project-box-wrapper">
             <div class="project-box project-box2" id="project-box2">
               <div class="info-div">
-                <img src="src/webp/makola.png" alt="makola favicon" class="faviconforProject" />
-                <article class="ProjectHeading">Makola Website</article>
+                <img src="src/webp/schedul-er.png" alt="schedul-er favicon" class="faviconforProject" />
+                <article class="ProjectHeading">Schedul-er</article>
                 <p class="ProjectDescription">
-                  Makola: An e-commerce platform for buying and selling products.
-                  It features a user-friendly interface, secure payment options, and a wide range of products.
+                a modern web application designed to streamline the class scheduling process for educational institutions.
+                It provides an intuitive interface for managing classes, teachers, and students while ensuring efficient 
+                time management and resource allocation.
                 </p>
                 <div class="project-buttons">
-                  <a href="https://makola.com" target="_blank" rel="noopener" class="cta"
-                    aria-label="Visit makola Live">
+                  <a href="https://github.com/charwayyyyyy/Schedul-er.git" target="_blank" rel="noopener" class="cta"
+                    aria-label="Visit Schedul-er Live">
                     <span>Live view</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
                       <path d="M1,5 L11,5"></path>
@@ -468,9 +469,36 @@
                 </div>
               </div>
               <div class="image-div">
-                <img src="src/webp/makola.png" alt="makola website preview image" />
+                <img src="src/webp/schedul-er.png" alt="schedul-er website preview image" />
               </div>
             </div>
+
+            <!-- ---------------------- -->
+              <div class ="project-box project-box1" id="project-box1">
+              <div class="image-div">
+                <img src="src/webp/lamaisonier.png" alt="lamaisonier image" />
+              </div>
+              <div class="info-div">
+                <img src="src/webp/lamaisonier.png" alt="lamaisonier favicon" class="faviconforProject" />
+                <article class="ProjectHeading">La Maison-ier</article>
+                <p class="ProjectDescription">
+                  an architectural website with 3D designs and interactive elements built with html, css and three.js.
+                </p>
+                <div class="project-buttons">
+                  <a href="https://la-maison-ier.vercel.app/" target="_blank" rel="noopener" class="cta"
+                    aria-label="Visit La Maison-ier Live">
+                    <span>Live view</span>
+                    <svg viewBox="0 0 13 10" height="10px" width="15px">
+                      <path d="M1,5 L11,5"></path>
+                      <polyline points="8 1 12 5 8 9"></polyline>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+
+
 
             <div class ="project-box project-box1" id="project-box1">
               <div class="image-div">
@@ -497,29 +525,6 @@
             </div>
 
           <!-- ---------------------- -->
-          <div class ="project-box project-box2" id="project-box2">
-            <div class="image-div">
-              <img src="src/webp/sms.png" alt="sms website preview image" />
-            </div>
-            <div class="info-div">
-              <img src="src/webp/sms.png" alt="sms favicon" class="faviconforProject" />
-              <article class="ProjectHeading">Student Management System Website</article>
-              <p class="ProjectDescription">
-                Student Management System: A web application for managing student information, courses, and grades.
-                It features a user-friendly interface, secure login, and data visualization tools.
-              </p>
-              <div class="project-buttons">
-                <a href="https://github.com/charwayyyyyy/collegium.git" target="_blank" rel="noopener" class="cta"
-                  aria-label="Visit sms Live">
-                  <span>Live view</span>
-                  <svg viewBox="0 0 13 10" height="10px" width="15px">
-                    <path d="M1,5 L11,5"></path>
-                    <polyline points="8 1 12 5 8 9"></polyline>
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
           <!-- ---------------------- -->
           <div class ="project-box project-box1" id="project-box1">
             <div class="image-div">
