--- a/index.html
+++ b/index.html
@@ -474,7 +474,8 @@
             </div>
 
             <!-- ---------------------- -->
-              <div class ="project-box project-box1" id="project-box1">
+            <!-- ---------------------- -->
+            <div class ="project-box project-box1" id="project-box1">
               <div class="image-div">
                 <img src="src/webp/lamaisonier.png" alt="lamaisonier image" />
               </div>
@@ -496,50 +497,24 @@
                 </div>
               </div>
             </div>
-
-
-
-
-            <div class ="project-box project-box1" id="project-box1">
-              <div class="image-div">
-                <img src="src/webp/portfolio-preview.png" alt="charwayyyyyy portfolio preview image" />
-              </div>
-              <div class="info-div">
-                <img src="src/webp/portfolio-preview .png" alt="charwayyyyyy favicon" class="faviconforProject" />
-                <article class="ProjectHeading">Charwayyyyyy's Portfolio</article>
-                <p class="ProjectDescription">
-                  My personal portfolio website showcasing my skills, projects, and experiences as a fullstack developer.
-                  It features a modern design, responsive layout, and interactive elements.
-                </p>
-                <div class="project-buttons">
-                  <a href="https://charwayyyyyysportfolio.site" target="_blank" rel="noopener" class="cta"
-                    aria-label="Visit charwayyyyyy's portfolio Live">
-                    <span>Live view</span>
-                    <svg viewBox="0 0 13 10" height="10px" width="15px">
-                      <path d="M1,5 L11,5"></path>
-                      <polyline points="8 1 12 5 8 9"></polyline>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-            </div>
-
           <!-- ---------------------- -->
           <!-- ---------------------- -->
-          <div class ="project-box project-box1" id="project-box1">
+
+          <div class ="project-box project-box2" id="project-box2">
             <div class="image-div">
-              <img src="src/webp/todolist.png" alt="charwayyyyyy website preview image" />
+              <img src="src/webp/agrimart.png" alt="cusinier website preview image" />
             </div>
             <div class="info-div">
-              <img src="src/webp/todolist.png" alt="charwayyyyyy favicon" class="faviconforProject" />
-              <article class="ProjectHeading">To-do List App</article>
+              <img src="src/webp/agrimart.png" alt="AgriMart favicon" class="faviconforProject" />
+              <article class="ProjectHeading">AgriMart E-Commerce</article>
               <p class="ProjectDescription">
-                To-do List App: A web application for managing tasks and to-do items.
-                It features a user-friendly interface, task categorization, and progress tracking.
+                AgriMart ecommerce connects customers directly with local farmers,
+                enabling them to purchase fresh produce directly from the farmers,
+                streamlining the agricultural supply chain and reducing intermediaries in Ghana
               </p>
               <div class="project-buttons">
-                <a href="https://github.com/charwayyyyyy/To-do-list-app.git" target="_blank" rel="noopener" class="cta"
-                  aria-label="Visit charwayyyyyy's website Live">
+                <a href="https://agri-mart-phi.vercel.app/" target="_blank" rel="noopener" class="cta"
+                  aria-label="Visit AgriMart Live">
                   <span>Live view</span>
                   <svg viewBox="0 0 13 10" height="10px" width="15px">
                     <path d="M1,5 L11,5"></path>
@@ -572,53 +547,10 @@
                   </svg>
                 </a>
               </div>
+            </div>
+
           <!-- ---------------------- -->
-            </div>
-          </div>
-          <div class ="project-box project-box1" id="project-box1">
-            <div class="image-div">
-              <img src="src/webp/gameofchess.png" alt="game of chess website preview image" />
-            </div>
-            <div class="info-div">
-              <img src="src/webp/gameofchess.png" alt="game of chess favicon" class="faviconforProject" />
-              <article class="ProjectHeading">Game of Chess</article>
-              <p class="ProjectDescription">
-                Game of Chess: A web-based chess game that allows users to play chess against each other or against an AI opponent.
-              </p>
-              <div class="project-buttons">
-                <a href="https://game-of-chess-seven.vercel.app/" target="_blank" rel="noopener" class="cta"
-                  aria-label="Visit game of chess Live">
-                  <span>Live view</span>
-                  <svg viewBox="0 0 13 10" height="10px" width="15px">
-                    <path d="M1,5 L11,5"></path>
-                    <polyline points="8 1 12 5 8 9"></polyline>
-                  </svg>
-                </a>
-              </div>
           <!-- ---------------------- -->
-            </div>
-          </div>
-          <div class ="project-box project-box2" id="project-box2">
-            <div class="image-div">
-              <img src="src/webp/algomatch.png" alt="algomatch website preview image" />
-            </div>
-            <div class="info-div">
-              <img src="src/webp/algomatch.png" alt="algomatch favicon" class="faviconforProject" />
-              <article class="ProjectHeading">Algomatch</article>
-              <p class="ProjectDescription">
-AlgoMatch is a web application that helps developers practice coding interviews by matching
- them with peers for mock interviews and providing a collaborative coding environment
-              </p>
-              <div class="project-buttons">
-                <a href="https://algomatch.vercel.app/" target="_blank" rel="noopener" class="cta"
-                  aria-label="Visit algomatch Live">
-                  <span>Live view</span>
-                  <svg viewBox="0 0 13 10" height="10px" width="15px">
-                    <path d="M1,5 L11,5"></path>
-                    <polyline points="8 1 12 5 8 9"></polyline>
-                  </svg>
-                </a>
-              </div>
           <!-- --------------------- -->
           <!-- --------------------- -->
 
