--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           </div>
         </article>
         <p id="info-para" data-aos="fade-up" data-aos-delay="600">
-          I am a fullstack developer/programmer and an IT manager, dedicated to 
+          I am a fullstack developer (frontend specialised) and an IT manager, dedicated to 
           creating innovative, practical, and efficient tech solutions.
 
 <br />
@@ -550,6 +550,7 @@
             </div>
 
           <!-- ---------------------- -->
+
           <!-- ---------------------- -->
           <!-- --------------------- -->
           <!-- --------------------- -->
